Login test Anda perfecto, todas las variablea en .env

--- a/.env
+++ b/.env
@@ -86,5 +86,7 @@ LDAP_PORT=389
 LDAP_BIND_DN="CN=Portal Intranet Soporte,OU=Cuentas de Servicios,OU=Admin,DC=rosario,DC=frro,DC=utn,DC=edu,DC=ar"
 LDAP_PASSWORD="M5IM5SjOw7OC"
 LDAP_BASE_DN="DC=rosario,DC=frro,DC=utn,DC=edu,DC=ar"
+LDAP_TEST_USER="juanpablo.dure@hgtsa.com.ar"
+LDAP_LANDING="/home"
 
 
